[package]
name = "mazes"
version = "0.1.0"
authors = ["namerril"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.55"
web-sys = { version = "0.3.55", features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
] }

log = "0.4.14"
wasm-logger = "0.2.0"
rand = "0.8.4"
getrandom = { version = "0.2.3", features = ["js"] }

wee_alloc = "0.4.5"
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
